[gd_scene load_steps=5 format=3 uid="uid://dam3228oxnp8k"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/training_program.gd" id="1_kkc02"]
[ext_resource type="PackedScene" uid="uid://bcutea2mk6dtk" path="res://Scenes/TrainingProgram/parts/GameplayLoop/GameplayLoop.tscn" id="2_bnndc"]
[ext_resource type="PackedScene" uid="uid://dbbfm67s1r6vm" path="res://Scenes/TrainingProgram/parts/LogoScreen/LogoScreen.tscn" id="2_rckpd"]
[ext_resource type="PackedScene" uid="uid://ccfxehln1766x" path="res://Scenes/TrainingProgram/parts/TitleScreen/TitleScreen.tscn" id="3_8ygkj"]

[node name="TrainingProgram" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kkc02")

[node name="GameplayLoop" parent="." instance=ExtResource("2_bnndc")]
visible = false
layout_mode = 2

[node name="TitleScreen" parent="." instance=ExtResource("3_8ygkj")]
visible = false
layout_mode = 2
delay = 10.0

[node name="LogoScreen" parent="." instance=ExtResource("2_rckpd")]
layout_mode = 2
delay = 20.0
